--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -20,8 +20,8 @@ jobs:
         run: python -c "import sys; print(sys.version)"
       - name: pip Upgrade
         run: python -m pip install --upgrade pip
-      - name: Install the Package
-        run: pip install timeloading
+     # - name: Install the Package
+     #   run: pip install timeloading
       - name: Install example related packages
         run: pip install hexor
       - name: Testing the Package
