--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -20,9 +20,9 @@ jobs:
         run: python -c "import sys; print(sys.version)"
       - name: pip Upgrade
         run: python -m pip install --upgrade pip
-     # - name: Install the Package
-     #   run: pip install timeloading
-      - name: Install example related packages
-        run: pip install hexor
+      #- name: Install the Package
+      #  run: pip install timeloading
+      - name: Install requirements
+        run: pip install -r requirements.txt
       - name: Testing the Package
         run: python examples.py
